Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -10,34 +10,33 @@ waar-wijvoor-staan-tekst: "We doen wat we zeggen en zeggen wat we doen.  Zowel
   hoe we onderling samenwerken in ons bedrijf, als hoe we samenwerken met onze
   opdrachtgevers. Wij werken altijd:"
 waarde-1-titel: In verbinding
-waarde-1-tekst: >
-  We creëren synergie tussen mensen onderling, en hun verbinding met het doel
-  van de organisatie. We geloven erin dat hoe meer mensen zichzelf kunnen zijn
-  en ontwikkelen, hoe mooier de resultaten zijn die zij tot stand brengen.
+waarde-1-tekst: >-
+  Synergie ontstaat daar waar mensen verbonden zijn met zichzelf, met elkaar en
+  met het doel van de organisatie. ​
 
 
-  Zelfbewustzijn, eigenaarschap, betrokkenheid en verantwoordelijkheid nemen zijn hierbij de kern. In verbinding durven we ook scherp te zijn: waar kan of moet het beter, waar liggen kansen? 
-
-
-  *Tekst gaat hier eigenlijk nog door maar dit wordt te lang.*
+  Zelfbewustzijn, eigenaarschap, betrokkenheid en verantwoordelijkheid nemen zijn hierbij de kern. Daar staan we zelf voor en het is ook precies waar we onze klanten bij helpen.
 waarde-1-afbeelding: /assets/images/upload/icoon3.png
 waarde-2-titel: In vertrouwen
 waarde-2-tekst: >-
-  We bouwen aan vertrouwen. Aan persoonlijk leiderschap  en professionele
-  ontwikkeling van medewerkers en aan de organisatiecultuur als geheel. We
-  werken open en transparant samen met onze klanten. 
+  Vertrouwen is voor ons de basis van waaruit we werken. Onderling als collega's
+  en in samenwerking met onze klanten. Het is bijna onze tweede natuur om waar
+  we werken, te bouwen aan het vertrouwen tussen mensen onderling en in
+  organisaties als geheel. ​
 
 
-  Als Human Connection zijn we pragmatisch en plat georganiseerd, waarbij we gelijkwaardig samenwerken vanuit onze verschillende persoonlijkheden en expertises. Op open wijze bespreken we onderling onze wensen, uitglijders en salarissen.
+  We benaderen mensen en hun vraagstukken positief: we koesteren uit principe veel vertrouwen in ieders goede intenties, mogelijkheden en veerkracht.
 waarde-2-afbeelding: /assets/images/upload/icoon2.png
 waarde-3-titel: In context
 waarde-3-tekst: >-
-  We sluiten nauw aan bij de bestaande context van een  organisatie en mensen.
   We bekijken iedere vraag, hoe groot of klein ook, met een brede blik. 'Wat is
-  hier nou echt aan de hand? Welke patronen spelen hier?' 
+  hier nou echt aan de hand? Welke patronen spelen hier?' ​
 
 
-  Van daaruit zetten we samen resultaatgerichte stappen, die passend zijn voor de bedoeling van de organisatie en de professionele en persoonlijke context van mensen. Alles wat we doen is daarom maatwerk.​
+  Juist het samenspel tussen allerlei factoren (zoals de organisatie-inrichting, de manier van werken, de cultuur, de veranderende buitenwereld) bepalen het succes. Daarom sluiten we nauw aan bij de context van een organisatie en mensen en is alles wat we doen maatwerk.
+
+
+  ​
 waarde-3-afbeelding: /assets/images/upload/icoon1.png
 wat-wij-doen: Wat wij doen
 wat-wij-doen-tekst: "We benaderen ieder vraagstuk met een organisatiebrede blik.
