Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -45,21 +45,21 @@ wat-wij-doen-1-titel: Organisatieontwikkeling & teamontwikkeling
 wat-wij-doen-1-tekst: >-
   We adviseren en begeleiden teams en organisaties bij veranderingen. Via
   langere trajecten (blijvende cultuurverandering of reorganisaties), kortere
-  interventies (teambuilding en proactief gedrag) en 'alles daartussenin'.
+  interventies (teambuilding en proactief gedrag) en 'alles daartussenin'.​
 
 
-  Bijvoorbeeld:
+  Voorbeelden hiervan zijn: ​
 
 
-  * Transformatie naar meer zelfsturing
+  * Transformatie naar meer zelfsturing​
 
-  * Faciliteren verdiepende gesprekken en krachtige besluitvorming.
+  * Faciliteren verdiepende gesprekken en krachtige besluitvorming.​
 
   * Cultuurontwikkeling: betere prestaties en een (pro)actievere cultuur.​
 
-  * Reorganisaties/fusies/ samenwerkingsverbanden optimaliseren
+  * Reorganisaties/fusies/samenwerkingsverbanden optimaliseren​
 
-  * invoeren en begeleiden van[ Agile/Scrum](https://humanc.nl/agile-scrum/)​
+  * Invoeren en begeleiden van Agile/Scrum (GEEN LINK!)​
 
   * Programma en projectmanagement​
 wat-wij-doen-1-contact: |-
@@ -68,23 +68,24 @@ wat-wij-doen-1-contact: |-
 wat-wij-doen-1-button: Contact met Sjef
 wat-wij-doen-2-titel: Interim management
 wat-wij-doen-2-tekst: >-
-  We nemen voor een bepaalde tijd het roer over of zijn een stevige
-  ***'wingman'*** van een team of organisatie. Dit doen we graag in combinatie
-  met een veranderopgave. ​
+  Als interim-professional zijn we een tijdje onderdeel van de organisatie. Als
+  manager of directeur zetten we, samen met de in de organisatie aanwezige
+  strategische partners, initiatiefrijk een koers uit die in lijn ligt met het
+  grotere geheel. Dit doen we graag in combinatie met een veranderopgave. ​
 
 
-  ​We doen dit bijvoorbeeld op het gebied van:​
+  We doen dit bijvoorbeeld op het gebied van:​
 
 
   * Verandermanagement​
 
   * HR-management​
 
-  * strategie-implementatie​
+  * Strategie-implementatie​
 
-  * ICTmanagement​
+  * ICT-management​
 
-  * L&O Professional​
+  * L&O Professional
 wat-wij-doen-2-contact: |-
   **Meer weten?**\
   Neem bijvoorbeeld contact op met Meggie of Dorothé.
@@ -93,23 +94,26 @@ wat-wij-doen-3-titel: Leren & ontwikkelen
 wat-wij-doen-3-tekst: >-
   We begeleiden persoonlijke en professionele ontwikkeling voor bestuurders,
   leidinggevenden en professionals. Persoonlijk leiderschap en persoonlijke
-  effectiviteit zijn hierbij belangrijke thema's.​
+  effectiviteit zijn hierbij belangrijke thema's. ​
 
 
-  Het ontwerpen en uitvoeren van ontwikkeltrajecten
+  We adviseren over de meest effectieve aanpak en ontwerpen en begeleiden workshops of trajecten zoals:​
 
-  * Leiderschapsprogramma's
 
-  * Opzetten en begeleiden van effectieve intervisie
+  * Ontwikkeltrajecten​
 
-  * Individuele coaching
+  * Leiderschapsprogramma's​
 
-  * Advies, strategie en begeleiding bij talentmanagement/ traineeprogramma's 
+  * Intervisie​
 
-  * Advies, strategie en begeleiding bij het ontwerpen en inrichten van een duurzame leerinfrastructuur
+  * Individuele coaching​
+
+  * Talentmanagement en traineeprogramma's ​
+
+  * Inrichting van een effectieve leerinfrastructuur​
 wat-wij-doen-3-contact: |-
   **Meer weten?**\
-  Neem bijvoorbeeld contact op met Marit of Annet.
+  Neem contact op met bijvoorbeeld Marit of Annet.
 wat-wij-doen-3-button: Contact met Marit
 hoe-wij-werken: Meer weten over hóe wij werken?
 wie-wij-zijn: Wie wij zijn
