Update Teksten “hoe-wij-werken”

--- a/_data/hoe-wij-werken.yml
+++ b/_data/hoe-wij-werken.yml
@@ -1,9 +1,25 @@
 title: Hoe wij werken
-pagina-afbeelding: /assets/images/upload/parachute.jpg
 landing-tekst: >-
-  Is dit 'hoe wij te werk gaan'? Met de uitgangspunten van slide 5 in ons achterhoofd. Dus concreet hoe we aan de slag gaan. Pragmatici moeten hier een beeld krijgen op hun vraag: hoe werken deze mensen dan? Manier van van maatwerk – traject – veel afstemming en parnterschap en evaluatie?
+  Alles wat we doen is maatwerk, omdat elke verandering haar eigen dynamiek,
+  complexiteit en tempo heeft.  ​
+
+
+  We zijn doorgewinterd in een aantal methodieken en hebben veel kennis in huis. Waar nodig zetten we deze in. Theorie en modellen gebruiken we als collectief begrippenkader en gemeenschappelijk taal. Het accent ligt bij ons altijd op directe toepasbaarheid in het dagelijkse werk. ​
+
+
+  Voorbeelden van methoden en werkvormen zijn: Connect to Perform-cultuurontwikkeling | Agile​/Scrum | Deep Democracy | Zakelijk Tekenen | Discovery Insights | Voice Dialogue | Onomkeerbaar veranderen | Ontwerpen met de leerinfrastructuur | Diverse creatieve werkvormen\
+
+
+  Ontwikkelingsgericht als we zijn, blijven we up to date met de nieuwste inzichten op het gebied van theorie en praktijk.
+pagina-afbeelding: /assets/images/upload/parachute.jpg
 waar-wij-voor-staan: Binnen kaders resultaatgericht
-waar-wijvoor-staan-tekst: "We beginnen met koffie, systemische blik op het geheel, wat is hier nou echt aan de hand? Ongevraagd advies. Realistische kades en verwachtingen. Geen franje. designen waar mogelijk met de doelgroep. Waar mogelijk pragmatische buiten locaties actieve vormen en verdiepende gesprekken krachtige besluitvorming evt roer overnemend oog voor de ind mens en zijn werk en prive context Resulteert: monitoren evalueren follow up geen 'one offs'. "
+waar-wijvoor-staan-tekst: "We beginnen met koffie, systemische blik op het
+  geheel, wat is hier nou echt aan de hand? Ongevraagd advies. Realistische
+  kades en verwachtingen. Geen franje. designen waar mogelijk met de doelgroep.
+  Waar mogelijk pragmatische buiten locaties actieve vormen en verdiepende
+  gesprekken krachtige besluitvorming evt roer overnemend oog voor de ind mens
+  en zijn werk en prive context Resulteert: monitoren evalueren follow up geen
+  'one offs'. "
 waarde-1-titel: Mensgericht
 waarde-1-tekst: >
   We creëren synergie tussen mensen onderling, en hun verbinding met het doel
