Update Teksten “hoe-wij-werken”

--- a/_data/hoe-wij-werken.yml
+++ b/_data/hoe-wij-werken.yml
@@ -12,41 +12,23 @@ landing-tekst: >-
 
   Ontwikkelingsgericht als we zijn, blijven we up to date met de nieuwste inzichten op het gebied van theorie en praktijk.
 pagina-afbeelding: /assets/images/upload/parachute.jpg
-waar-wij-voor-staan: Binnen kaders resultaatgericht
-waar-wijvoor-staan-tekst: "We beginnen met koffie, systemische blik op het
-  geheel, wat is hier nou echt aan de hand? Ongevraagd advies. Realistische
-  kades en verwachtingen. Geen franje. designen waar mogelijk met de doelgroep.
-  Waar mogelijk pragmatische buiten locaties actieve vormen en verdiepende
-  gesprekken krachtige besluitvorming evt roer overnemend oog voor de ind mens
-  en zijn werk en prive context Resulteert: monitoren evalueren follow up geen
-  'one offs'. "
-waarde-1-titel: Mensgericht
-waarde-1-tekst: >
-  We creëren synergie tussen mensen onderling, en hun verbinding met het doel
-  van de organisatie. We geloven erin dat hoe meer mensen zichzelf kunnen zijn
-  en ontwikkelen, hoe mooier de resultaten zijn die zij tot stand brengen.
-
-
-  Zelfbewustzijn, eigenaarschap, betrokkenheid en verantwoordelijkheid nemen zijn hierbij de kern. In verbinding durven we ook scherp te zijn: waar kan of moet het beter, waar liggen kansen? 
-
-
-  *Tekst gaat hier eigenlijk nog door maar dit wordt te lang.*
+waar-wij-voor-staan: Waarschijnlijk mag dit kopje weg
+waar-wijvoor-staan-tekst: Hier komt ook geen tekst
+waarde-1-titel: Contact en context
+waarde-1-tekst: "Het begint bij persoonlijk contact. We bekijken samen met een
+  opdrachtgever wat de context van de organisatie en de mensen op de werkvloer
+  is. We kijken met een brede blik op het geheel: 'wat is hier nou echt aan de
+  hand?'​"
 waarde-1-afbeelding: /assets/images/upload/icoon3.png
-waarde-2-titel: Transparant
-waarde-2-tekst: >-
-  We bouwen aan vertrouwen. Aan persoonlijk leiderschap  en professionele
-  ontwikkeling van medewerkers en aan de organisatiecultuur als geheel. We
-  werken open en transparant samen met onze klanten. 
-
-
-  Als Human Connection zijn we pragmatisch en plat georganiseerd, waarbij we gelijkwaardig samenwerken vanuit onze verschillende persoonlijkheden en expertises. Op open wijze bespreken we onderling onze wensen, uitglijders en salarissen.
+waarde-2-titel: Pragmatisch ontwerp en advies
+waarde-2-tekst: Op basis daarvan geven we advies over een effectieve aanpak.
+  Hierbij laten we de organisatie zoveel mogelijk zelf aan het stuur staan. We
+  ontwerpen vooruit, het liefst samen met de mensen om wie het gaat. We scheppen
+  realistische verwachtingen en kaders.
 waarde-2-afbeelding: /assets/images/upload/icoon2.png
-waarde-3-titel: Systemisch
-waarde-3-tekst: >-
-  We sluiten nauw aan bij de bestaande context van een  organisatie en mensen.
-  We bekijken iedere vraag, hoe groot of klein ook, met een brede blik. 'Wat is
-  hier nou echt aan de hand? Welke patronen spelen hier?' 
-
-
-  Van daaruit zetten we samen resultaatgerichte stappen, die passend zijn voor de bedoeling van de organisatie en de professionele en persoonlijke context van mensen. Alles wat we doen is daarom maatwerk.​
+waarde-3-titel: Begeleiding
+waarde-3-tekst: We begeleiden de uitvoering stap voor stap, zodat bijstelling
+  altijd mogelijk is. We werken methodisch waar nodig. We begrijpen de dynamiek
+  en complexiteit van organisaties en hebben ook altijd oog voor de individuele
+  mens en zijn werk en privé context. ​
 waarde-3-afbeelding: /assets/images/upload/icoon1.png
