Update Teksten “hoe-wij-werken”

--- a/_data/hoe-wij-werken.yml
+++ b/_data/hoe-wij-werken.yml
@@ -4,7 +4,7 @@ landing-tekst: >-
   complexiteit en tempo heeft.  ​
 
 
-  We zijn doorgewinterd in een aantal methodieken en hebben veel kennis in huis. Waar nodig zetten we deze in. Theorie en modellen gebruiken we als collectief begrippenkader en gemeenschappelijk taal. Het accent ligt bij ons altijd op directe toepasbaarheid in het dagelijkse werk. ​
+  We hebben veel kennis in huis en zijn doorgewinterd in een aantal methodieken. Waar nodig zetten we deze in. Theorie en modellen gebruiken we als collectief begrippenkader en gemeenschappelijk taal. Het accent ligt bij ons altijd op directe toepasbaarheid in het dagelijkse werk. ​
 
 
   Voorbeelden van methoden en werkvormen zijn: Connect to Perform-cultuurontwikkeling, Agile​/Scrum, Deep Democracy, Zakelijk Tekenen, Discovery Insights, Voice Dialogue, Onomkeerbaar veranderen, Ontwerpen met de leerinfrastructuur, Diverse creatieve werkvormen \
