Update Teksten “hoe-wij-werken”

--- a/_data/hoe-wij-werken.yml
+++ b/_data/hoe-wij-werken.yml
@@ -5,15 +5,16 @@ landing-tekst: >-
 
 
   We hebben veel kennis in huis en zijn doorgewinterd in een aantal methodieken. Waar nodig zetten we deze in. Theorie en modellen gebruiken we als collectief begrippenkader en gemeenschappelijk taal. Het accent ligt bij ons altijd op directe toepasbaarheid in het dagelijkse werk. ​
-
-
-  Voorbeelden van methoden en werkvormen zijn: Connect to Perform-cultuurontwikkeling, Agile​/Scrum, Deep Democracy, Zakelijk Tekenen, Discovery Insights, Voice Dialogue, Onomkeerbaar veranderen, Ontwerpen met de leerinfrastructuur, Diverse creatieve werkvormen \
+pagina-afbeelding: /assets/images/upload/parachute.jpg
+waar-wij-voor-staan: Methoden en Werkvormen
+waar-wijvoor-staan-tekst: >-
+  Voorbeelden van methoden en werkvormen zijn: Connect to
+  Perform-cultuurontwikkeling, Agile​/Scrum, Deep Democracy, Zakelijk Tekenen,
+  Discovery Insights, Voice Dialogue, Onomkeerbaar veranderen, Ontwerpen met de
+  leerinfrastructuur, Diverse creatieve werkvormen \
 
 
   Ontwikkelingsgericht als we zijn, blijven we up to date met de nieuwste inzichten op het gebied van theorie en praktijk.
-pagina-afbeelding: /assets/images/upload/parachute.jpg
-waar-wij-voor-staan: Waarschijnlijk mag dit kopje weg
-waar-wijvoor-staan-tekst: Hier komt ook geen tekst
 waarde-1-titel: Contact en context
 waarde-1-tekst: "Het begint bij persoonlijk contact. We bekijken samen met een
   opdrachtgever wat de context van de organisatie en de mensen op de werkvloer
