Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -3,7 +3,13 @@ landing-tekt: >-
   Human Connection is een organisatieadviesbureau dat zich richt op de
   menselijke kant van organisaties.​\
 
-  Vanuit verschillende rollen begeleiden we leiders, teams en individuele professionals om zich te ontwikkelen en proactiever (samen) te werken.​ We werken altijd op maat, met een brede blik voor mensen in hun context, een gezonde bedrijfsvoering en de ontwikkeling van de organisatiecultuur.​ We zijn ervaren in een breed werkveld, houden van een complexe uitdaging en kijken met een optimistische blik naar de mogelijkheden.
+  Vanuit verschillende rollen begeleiden we leiders, teams en individuele professionals om zich te ontwikkelen en proactiever (samen) te werken.​ 
+
+
+  We werken altijd op maat, met een brede blik voor mensen in hun context, een gezonde bedrijfsvoering en de ontwikkeling van de organisatiecultuur.​ 
+
+
+  We zijn ervaren in een breed werkveld, houden van een complexe uitdaging en kijken met een optimistische blik naar de mogelijkheden.
 pagina-afbeelding: /assets/images/upload/parachute.jpg
 waar-wij-voor-staan: Waar wij voor staan
 waar-wijvoor-staan-tekst: "We doen wat we zeggen en zeggen wat we doen.  Zowel
