Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -22,12 +22,17 @@ waarde-1-tekst: >-
 
 
   Zelfbewustzijn, eigenaarschap, betrokkenheid en verantwoordelijkheid nemen zijn hierbij de kern. Daar staan we zelf voor en het is ook precies waar we onze klanten bij helpen.
+
+
+  In verbinding durven we ook scherp te zijn: waar kan of moet het beter, waar liggen kansen? \
+
+  We nemen onze eigen persoonlijkheden, ervaringen en 'menselijkheid' mee in alles wat we doen. En zijn nieuwsgierig en oprecht geïnteresseerd in de mensen die we ontmoeten en hun beweegredenen.
 waarde-1-afbeelding: /assets/images/upload/icoon3.png
 waarde-2-titel: In vertrouwen
 waarde-2-tekst: >-
   Vertrouwen is voor ons de basis van waaruit we werken. Onderling als collega's
-  en in samenwerking met onze klanten. Het is bijna onze tweede natuur om waar
-  we werken, te bouwen aan het vertrouwen tussen mensen onderling en in
+  en in samenwerking met onze klanten. Het is onze tweede natuur om waar we
+  werken, te bouwen aan het vertrouwen tussen mensen onderling en in
   organisaties als geheel. ​
 
 
