Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -21,12 +21,7 @@ waarde-1-tekst: >-
   met het doel van de organisatie. ​
 
 
-  Zelfbewustzijn, eigenaarschap, betrokkenheid en verantwoordelijkheid nemen zijn hierbij de kern. Daar staan we zelf voor en het is ook precies waar we onze klanten bij helpen.
-
-
-  In verbinding durven we ook scherp te zijn: waar kan of moet het beter, waar liggen kansen? \
-
-  We nemen onze eigen persoonlijkheden, ervaringen en 'menselijkheid' mee in alles wat we doen. En zijn nieuwsgierig en oprecht geïnteresseerd in de mensen die we ontmoeten en hun beweegredenen.
+  Zelfbewustzijn, eigenaarschap, betrokkenheid en verantwoordelijkheid nemen zijn hierbij de kern. Daar staan we zelf voor en het is ook precies waar we onze klanten bij helpen. We nemen daarbij onze eigen persoonlijkheden, ervaringen en 'menselijkheid' mee in alles wat we doen.
 waarde-1-afbeelding: /assets/images/upload/icoon3.png
 waarde-2-titel: In vertrouwen
 waarde-2-tekst: >-
