Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -144,15 +144,13 @@ logos:
     naam-bedrijf: TOPdesk
 contact-titel: Contact
 contact-omschrijving: We komen graag met je in contact. Bel of mail direct een
-  van onze collega’s of vul onderstaand formulier in. Lorem ipsum dolor sit
-  amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-  et dolore magna aliqua.
+  van onze collega’s of vul onderstaand formulier in.
 contact-naam: Naam
 contact-email: E-mail
 contact-onderwerp: Onderwerp
 contact-bericht: Vraag/bericht
 contact-button: Verzend bericht
-uitnodiging: "Of kom langs in ons gezellige/scheve/ pittoreske Amsterdamse kantoor:"
+uitnodiging: "Of kom langs in ons pittoreske Amsterdamse kantoor:"
 postcode: 1013 GA Amsterdam
 uitnodiging-adres: ""
 adres: Singel 2a
