--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,9 +1,9 @@
 slogan: Veranderen is mensenwerk
 landing-tekt: >-
   Human Connection is een organisatieadviesbureau dat zich richt op de
-  menselijke kant van organisaties.​\
-
-  Vanuit verschillende rollen begeleiden we leiders, teams en individuele professionals om zich te ontwikkelen en proactiever (samen) te werken.​ 
+  menselijke kant van organisaties.​ Vanuit verschillende rollen begeleiden we
+  leiders, teams en individuele professionals om zich te ontwikkelen en
+  proactiever (samen) te werken.​ 
 
 
   We werken altijd op maat, met een brede blik voor mensen in hun context, een gezonde bedrijfsvoering en de ontwikkeling van de organisatiecultuur.​ 
