Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -63,7 +63,7 @@ wat-wij-doen-1-tekst: >-
 
   * Cultuurontwikkeling: betere prestaties en een (pro)actievere cultuur.​
 
-  * Reorganisaties/fusies/samenwerkingsverbanden optimaliseren​
+  * Reorganisaties/fusies/ samenwerkingsverbanden optimaliseren​
 
   * Invoeren en begeleiden van Agile/Scrum (GEEN LINK!)​
 
@@ -151,7 +151,7 @@ contact-onderwerp: Onderwerp
 contact-bericht: Vraag/bericht
 contact-button: Verzend bericht
 uitnodiging: "Of kom langs in ons pittoreske Amsterdamse kantoor:"
+adres: Singel 2a
 postcode: 1013 GA Amsterdam
 uitnodiging-adres: ""
-adres: Singel 2a
 afbeelding-kantoor: /assets/images/upload/kantoor.png
