deleted invisible characters

--- a/_data/hoe-wij-werken.yml
+++ b/_data/hoe-wij-werken.yml
@@ -1,7 +1,7 @@
 title: Hoe wij werken
 landing-tekst: >-
   Alles wat we doen is maatwerk, omdat elke verandering haar eigen dynamiek,
-  complexiteit en tempo heeft.  ​
+  complexiteit en tempo heeft.  
 
 
   We hebben veel kennis in huis en zijn doorgewinterd in een aantal methodieken. Waar nodig zetten we deze in. Theorie en modellen gebruiken we als collectief begrippenkader en gemeenschappelijk taal. Het accent ligt bij ons altijd op directe toepasbaarheid in het dagelijkse werk. ​
@@ -9,7 +9,7 @@ pagina-afbeelding: /assets/images/upload/parachute.jpg
 waar-wij-voor-staan: Methoden en Werkvormen
 waar-wijvoor-staan-tekst: >-
   Voorbeelden van methoden en werkvormen zijn: Connect to
-  Perform-cultuurontwikkeling, Agile​/Scrum, Deep Democracy, Zakelijk Tekenen,
+  Perform-cultuurontwikkeling, Agile/Scrum, Deep Democracy, Zakelijk Tekenen,
   Discovery Insights, Voice Dialogue, Onomkeerbaar veranderen, Ontwerpen met de
   leerinfrastructuur, Diverse creatieve werkvormen \
 
@@ -19,7 +19,7 @@ waarde-1-titel: Contact en context
 waarde-1-tekst: "Het begint bij persoonlijk contact. We bekijken samen met een
   opdrachtgever wat de context van de organisatie en de mensen op de werkvloer
   is. We kijken met een brede blik op het geheel: 'wat is hier nou echt aan de
-  hand?'​"
+  hand?'"
 waarde-1-afbeelding: /assets/images/upload/icoon3.png
 waarde-2-titel: Pragmatisch ontwerp en advies
 waarde-2-tekst: Op basis daarvan geven we advies over een effectieve aanpak.
@@ -31,5 +31,5 @@ waarde-3-titel: Begeleiding
 waarde-3-tekst: We begeleiden de uitvoering stap voor stap, zodat bijstelling
   altijd mogelijk is. We werken methodisch waar nodig. We begrijpen de dynamiek
   en complexiteit van organisaties en hebben ook altijd oog voor de individuele
-  mens en zijn werk en privé context. ​
+  mens en zijn werk en privé context.
 waarde-3-afbeelding: /assets/images/upload/icoon1.png
