--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,9 +1,9 @@
 slogan: Veranderen is mensenwerk
 landing-tekt: >-
   Human Connection is een organisatieadviesbureau dat zich richt op de
-  menselijke kant van organisaties.​ Vanuit verschillende rollen begeleiden we
+  menselijke kant van organisaties. Vanuit verschillende rollen begeleiden we
   leiders, teams en individuele professionals om zich te ontwikkelen en
-  proactiever (samen) te werken.​ 
+  proactiever (samen) te werken.
 
 
   We werken altijd op maat, met een brede blik voor mensen in hun context, een gezonde bedrijfsvoering en de ontwikkeling van de organisatiecultuur.​ 
@@ -18,7 +18,7 @@ waar-wijvoor-staan-tekst: "We doen wat we zeggen en zeggen wat we doen.  Zowel
 waarde-1-titel: In verbinding
 waarde-1-tekst: >-
   Synergie ontstaat daar waar mensen verbonden zijn met zichzelf, met elkaar en
-  met het doel van de organisatie. ​
+  met het doel van de organisatie. 
 
 
   Zelfbewustzijn, eigenaarschap, betrokkenheid en verantwoordelijkheid nemen zijn hierbij de kern. Daar staan we zelf voor en het is ook precies waar we onze klanten bij helpen. We nemen daarbij onze eigen persoonlijkheden, ervaringen en 'menselijkheid' mee in alles wat we doen.
@@ -28,7 +28,7 @@ waarde-2-tekst: >-
   Vertrouwen is voor ons de basis van waaruit we werken. Onderling als collega's
   en in samenwerking met onze klanten. Het is onze tweede natuur om waar we
   werken, te bouwen aan het vertrouwen tussen mensen onderling en in
-  organisaties als geheel. ​
+  organisaties als geheel. 
 
 
   We benaderen mensen en hun vraagstukken positief: we koesteren uit principe veel vertrouwen in ieders goede intenties, mogelijkheden en veerkracht.
@@ -36,13 +36,11 @@ waarde-2-afbeelding: /assets/images/upload/icoon2.png
 waarde-3-titel: In context
 waarde-3-tekst: >-
   We bekijken iedere vraag, hoe groot of klein ook, met een brede blik. 'Wat is
-  hier nou echt aan de hand? Welke patronen spelen hier?' ​
+  hier nou echt aan de hand? Welke patronen spelen hier?' 
 
 
   Juist het samenspel tussen allerlei factoren (zoals de organisatie-inrichting, de manier van werken, de cultuur, de veranderende buitenwereld) bepalen het succes. Daarom sluiten we nauw aan bij de context van een organisatie en mensen en is alles wat we doen maatwerk.
 
-
-  ​
 waarde-3-afbeelding: /assets/images/upload/icoon1.png
 wat-wij-doen: Wat wij doen
 wat-wij-doen-tekst: "We benaderen ieder vraagstuk met een organisatiebrede blik.
@@ -51,23 +49,23 @@ wat-wij-doen-1-titel: Organisatieontwikkeling & teamontwikkeling
 wat-wij-doen-1-tekst: >-
   We adviseren en begeleiden teams en organisaties bij veranderingen. Via
   langere trajecten (blijvende cultuurverandering of reorganisaties), kortere
-  interventies (teambuilding en proactief gedrag) en 'alles daartussenin'.​
+  interventies (teambuilding en proactief gedrag) en 'alles daartussenin'.
 
 
-  Voorbeelden hiervan zijn: ​
+  Voorbeelden hiervan zijn: 
 
 
-  * Transformatie naar meer zelfsturing​
+  * Transformatie naar meer zelfsturing
 
-  * Faciliteren verdiepende gesprekken en krachtige besluitvorming.​
+  * Faciliteren verdiepende gesprekken en krachtige besluitvorming.
 
-  * Cultuurontwikkeling: betere prestaties en een (pro)actievere cultuur.​
+  * Cultuurontwikkeling: betere prestaties en een (pro)actievere cultuur.
 
-  * Reorganisaties/fusies/ samenwerkingsverbanden optimaliseren​
+  * Reorganisaties/fusies/ samenwerkingsverbanden optimaliseren
 
-  * Invoeren en begeleiden van Agile/Scrum (GEEN LINK!)​
+  * Invoeren en begeleiden van Agile/Scrum (GEEN LINK!)
 
-  * Programma en projectmanagement​
+  * Programma en projectmanagement
 wat-wij-doen-1-contact: |-
   **Meer weten?**\
   Neem bijvoorbeeld contact op met Sjef of Zilla.
@@ -77,19 +75,19 @@ wat-wij-doen-2-tekst: >-
   Als interim-professional zijn we een tijdje onderdeel van de organisatie. Als
   manager of directeur zetten we, samen met de in de organisatie aanwezige
   strategische partners, initiatiefrijk een koers uit die in lijn ligt met het
-  grotere geheel. Dit doen we graag in combinatie met een veranderopgave. ​
+  grotere geheel. Dit doen we graag in combinatie met een veranderopgave. 
 
 
-  We doen dit bijvoorbeeld op het gebied van:​
+  We doen dit bijvoorbeeld op het gebied van:
 
 
-  * Verandermanagement​
+  * Verandermanagement
 
-  * HR-management​
+  * HR-management
 
-  * Strategie-implementatie​
+  * Strategie-implementatie
 
-  * ICT-management​
+  * ICT-management
 
   * L&O Professional
 wat-wij-doen-2-contact: |-
@@ -100,23 +98,23 @@ wat-wij-doen-3-titel: Leren & ontwikkelen
 wat-wij-doen-3-tekst: >-
   We begeleiden persoonlijke en professionele ontwikkeling voor bestuurders,
   leidinggevenden en professionals. Persoonlijk leiderschap en persoonlijke
-  effectiviteit zijn hierbij belangrijke thema's. ​
+  effectiviteit zijn hierbij belangrijke thema's.
 
 
-  We adviseren over de meest effectieve aanpak en ontwerpen en begeleiden workshops of trajecten zoals:​
+  We adviseren over de meest effectieve aanpak en ontwerpen en begeleiden workshops of trajecten zoals:
 
 
-  * Ontwikkeltrajecten​
+  * Ontwikkeltrajecten
 
-  * Leiderschapsprogramma's​
+  * Leiderschapsprogramma's
 
-  * Intervisie​
+  * Intervisie
 
-  * Individuele coaching​
+  * Individuele coaching
 
-  * Talentmanagement en traineeprogramma's ​
+  * Talentmanagement en traineeprogramma's 
 
-  * Inrichting van een effectieve leerinfrastructuur​
+  * Inrichting van een effectieve leerinfrastructuur
 wat-wij-doen-3-contact: |-
   **Meer weten?**\
   Neem contact op met bijvoorbeeld Marit of Annet.
