--- a/_data/hoe-wij-werken.yml
+++ b/_data/hoe-wij-werken.yml
@@ -33,3 +33,15 @@ waarde-3-tekst: We begeleiden de uitvoering stap voor stap, zodat bijstelling
   en complexiteit van organisaties en hebben ook altijd oog voor de individuele
   mens en zijn werk en privé context.
 waarde-3-afbeelding: /assets/images/upload/icoon1.png
+waarde-4-titel: Pragmatisch ontwerp en advies
+waarde-4-tekst: Op basis daarvan geven we advies over een effectieve aanpak.
+  Hierbij laten we de organisatie zoveel mogelijk zelf aan het stuur staan. We
+  ontwerpen vooruit, het liefst samen met de mensen om wie het gaat. We scheppen
+  realistische verwachtingen en kaders.
+waarde-4-afbeelding: /assets/images/upload/icoon2.png
+waarde-5-titel: Begeleiding
+waarde-5-tekst: We begeleiden de uitvoering stap voor stap, zodat bijstelling
+  altijd mogelijk is. We werken methodisch waar nodig. We begrijpen de dynamiek
+  en complexiteit van organisaties en hebben ook altijd oog voor de individuele
+  mens en zijn werk en privé context.
+waarde-5-afbeelding: /assets/images/upload/icoon1.png
