--- a/_data/connect-to-perform.yml
+++ b/_data/connect-to-perform.yml
@@ -35,4 +35,4 @@ werkvorm-tekst: >-
 
   De volgende Open online Spel-avond is op 8 november 2022 van 19.30 - 21.30. Andere momenten waarop we dit organiseren in 2023 9 februari, 13 juni, 9 november.
 button1: Meer weten over de open spelavond?
-button2: Meld je hier aan voor de CTP open spelavond
+button2: Meld je aan voor de open spelavond
