--- a/_data/connect-to-perform.yml
+++ b/_data/connect-to-perform.yml
@@ -1,4 +1,4 @@
-title: Hoe wij werken
+title: Connect to perform
 landing-tekst: >-
   Alles wat we doen is maatwerk, omdat elke verandering haar eigen dynamiek,
   complexiteit en tempo heeft.  
