--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -4,3 +4,4 @@ connect-to-perform: /connect-to-perform
 contact: /contact
 werken-bij: /werken-bij
 wie-wij-zijn: /wie-wij-zijn
+ctp-contact: /ctp-contact
