--- a/_data/hoe-wij-werken.yml
+++ b/_data/hoe-wij-werken.yml
@@ -3,15 +3,14 @@ landing-tekst: >-
   Alles wat we doen is maatwerk, omdat elke verandering haar eigen dynamiek,
   complexiteit en tempo heeft.  
 
-
-  We hebben veel kennis in huis en zijn doorgewinterd in een aantal methodieken. Waar nodig zetten we deze in. Theorie en modellen gebruiken we als collectief begrippenkader en gemeenschappelijk taal. Het accent ligt bij ons altijd op directe toepasbaarheid in het dagelijkse werk. ​
+  We hebben veel kennis in huis en zijn doorgewinterd in een aantal methodieken. Waar nodig zetten we deze in. Theorie en modellen gebruiken we als collectief begrippenkader en gemeenschappelijk taal. Het accent ligt bij ons altijd op directe toepasbaarheid in het dagelijkse werk.
 pagina-afbeelding: /assets/images/upload/parachute.jpg
 waar-wij-voor-staan: Methoden en Werkvormen
 waar-wijvoor-staan-tekst: >-
   Voorbeelden van methoden en werkvormen zijn: Connect to
   Perform-cultuurontwikkeling, Agile/Scrum, Deep Democracy, Zakelijk Tekenen,
   Discovery Insights, Voice Dialogue, Onomkeerbaar veranderen, Ontwerpen met de
-  leerinfrastructuur, Diverse creatieve werkvormen \
+  leerinfrastructuur, Diverse creatieve werkvormen 
 
 
   Ontwikkelingsgericht als we zijn, blijven we up to date met de nieuwste inzichten op het gebied van theorie en praktijk.
