--- a/_data/connect-to-perform.yml
+++ b/_data/connect-to-perform.yml
@@ -1,32 +1,41 @@
 title: Connect to perform
+pagina-afbeelding: /assets/images/upload/parachute.jpg
 landing-tekst: >-
   Alles wat we doen is maatwerk, omdat elke verandering haar eigen dynamiek,
   complexiteit en tempo heeft.  
 
 
   We hebben veel kennis in huis en zijn doorgewinterd in een aantal methodieken. Waar nodig zetten we deze in. Theorie en modellen gebruiken we als collectief begrippenkader en gemeenschappelijk taal. Het accent ligt bij ons altijd op directe toepasbaarheid in het dagelijkse werk. ​
-pagina-afbeelding: /assets/images/upload/parachute.jpg
 methoden: Methoden en Werkvormen
 methoden-tekst: >-
   Voorbeelden van methoden en werkvormen zijn: Connect to
   Perform-cultuurontwikkeling, Agile/Scrum, Deep Democracy, Zakelijk Tekenen,
   Discovery Insights, Voice Dialogue, Onomkeerbaar veranderen, Ontwerpen met de
-  leerinfrastructuur, Diverse creatieve werkvormen \
+  leerinfrastructuur, Diverse creatieve werkvormen 
 
 
   Ontwikkelingsgericht als we zijn, blijven we up to date met de nieuwste inzichten op het gebied van theorie en praktijk.
 pagina-illustratie: /assets/images/upload/parachute.jpg
 werkwijze-titel: Werkwijze
 werkwijze-tekst: >-
-  Tijdens het spel krijg je aan de hand van een fictieve situatie inzicht in de methodiek en mogelijke interventies om de organisatiecultuur en prestaties te ontwikkelen. Er wordt helder hoe je kunt signaleren in welke ontwikkelfase een organisatie (of team)cultuur zich bevindt. Op basis van voorbeelden uit de praktijk zie je spelenderwijs in wat er nodig is om de volgende ontwikkelstap te maken en wat juist zaken zijn die averechts uitpakken.
+  Tijdens het spel krijg je aan de hand van een fictieve situatie inzicht in de
+  methodiek en mogelijke interventies om de organisatiecultuur en prestaties te
+  ontwikkelen. Er wordt helder hoe je kunt signaleren in welke ontwikkelfase een
+  organisatie (of team)cultuur zich bevindt. Op basis van voorbeelden uit de
+  praktijk zie je spelenderwijs in wat er nodig is om de volgende ontwikkelstap
+  te maken en wat juist zaken zijn die averechts uitpakken.
 
 
-  Je krijgt zicht op zo’n vijftig verschillende interventies die toepasbaar zijn in de werkpraktijk, om het gedrag en de cultuur van een team en organisatie te beïnvloeden.
-  Kortom, in een paar uur wordt je op interactieve wijze ondergedompeld in onze succesvolle aanpak hoe je meer impact met je team maakt.
+  Je krijgt zicht op zo’n vijftig verschillende interventies die toepasbaar zijn in de werkpraktijk, om het gedrag en de cultuur van een team en organisatie te beïnvloeden. Kortom, in een paar uur wordt je op interactieve wijze ondergedompeld in onze succesvolle aanpak hoe je meer impact met je team maakt.
 werkvorm-titel: Werkvorm
 werkvorm-tekst: >-
-  Als kennismaking organiseren we een aantal keer per jaar een open spelavond, tegenwoordig veelal online, waarop onze relaties en geïnteresseerden welkom zijn kennis te maken met deze methodiek. (deelname geheel gratis en zonder verdere verplichtingen)
-  Meld je aan via deze link. Via een inlog in ons online leerportaal krijg je toegang tot video’s met uitleg en achtergrondinformatie. Bovendien leert de ervaring dat het erg interessant is van gedachten te wisselen met mensen die je nog niet kende, werkzaam in diverse organisaties.
+  Als kennismaking organiseren we een aantal keer per jaar een open spelavond,
+  tegenwoordig veelal online, waarop onze relaties en geïnteresseerden welkom
+  zijn kennis te maken met deze methodiek. (deelname geheel gratis en zonder
+  verdere verplichtingen) Meld je aan via deze link. Via een inlog in ons online
+  leerportaal krijg je toegang tot video’s met uitleg en achtergrondinformatie.
+  Bovendien leert de ervaring dat het erg interessant is van gedachten te
+  wisselen met mensen die je nog niet kende, werkzaam in diverse organisaties.
 
 
   In organisaties spelen we het spel (online of offline) in MT-trajecten of leiderschapsprogramma’s. We hebben verschillende werkvormen, afhankelijk van tijd en interesse van de doelgroep en passen het spel ook inhoudelijk op maat aan waar nodig. De vertaling naar de werkcontext, in het licht van de strategie van de organisatie en tevens de concretisering ‘wat ga ik er morgen mee doen’ zijn belangrijke onderdelen in de nabespreking en eventuele follow-up.
