add links to homepage

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -70,6 +70,7 @@ wat-wij-doen-1-contact: |-
   **Meer weten?**\
   Neem bijvoorbeeld contact op met Sjef of Zilla.
 wat-wij-doen-1-button: Contact met Sjef
+wat-wij-doen-1-link: /team/sjef-van-gool/
 wat-wij-doen-2-titel: Interim management
 wat-wij-doen-2-tekst: >-
   Als interim-professional zijn we een tijdje onderdeel van de organisatie. Als
@@ -94,6 +95,8 @@ wat-wij-doen-2-contact: |-
   **Meer weten?**\
   Neem bijvoorbeeld contact op met Meggie of Dorothé.
 wat-wij-doen-2-button: Contact met Meggie
+wat-wij-doen-2-link: /team/meggie-van-de-bunt/
+
 wat-wij-doen-3-titel: Leren & ontwikkelen
 wat-wij-doen-3-tekst: >-
   We begeleiden persoonlijke en professionele ontwikkeling voor bestuurders,
@@ -119,6 +122,7 @@ wat-wij-doen-3-contact: |-
   **Meer weten?**\
   Neem contact op met bijvoorbeeld Marit of Annet.
 wat-wij-doen-3-button: Contact met Marit
+wat-wij-doen-3-link: /team/marit-weiss/
 hoe-wij-werken: Meer weten over hóe wij werken?
 wie-wij-zijn: Wie wij zijn
 actievraag: Waar loop jij tegenaan in je organisatie?
