--- a/_data/ctp-contact.yml
+++ b/_data/ctp-contact.yml
@@ -10,12 +10,9 @@ landing-tekst: >-
   We hebben veel kennis in huis en zijn doorgewinterd in een aantal methodieken. Waar nodig zetten we deze in. Theorie en modellen gebruiken we als collectief begrippenkader en gemeenschappelijk taal. Het accent ligt bij ons altijd op directe toepasbaarheid in het dagelijkse werk. ​
 title: Connect to perform
 pagina-afbeelding: /assets/images/upload/parachute.jpg
-aanmelding-title: Methoden en Werkvormen
-aanmelding-zoom: Via Zoom
-aanmelding-tekst: We komen graag met je in contact. Bel of mail direct een van
-  onze collega’s of vul onderstaand formulier in. Lorem ipsum dolor sit amet,
-  consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-  dolore magna aliqua.
+aanmelding-title: Aanmeldformulier Spelavond
+aanmelding-zoom: " "
+aanmelding-tekst: Vul hier je gegevens in om je aan te melden voor de spelavond.
 naam: Naam*
 email: Email*
 bedrijf: Bedrijf*
@@ -23,9 +20,8 @@ functie: Functie*
 telefoonnummer: Telefoonnummer*
 welke: Voor welke avond meld je je aan?*
 data:
-  - datum: 8 november (Online/offline)
   - datum: 13 juni 2023
-  - datum: 9 juni
-
+  - datum: 9 februari 2023
+  - datum: 9 november 2023
 hoe: Via wie of hoe weet je van de Connect to Perform avond?
 reden: Wat is je reden van aanmelden?
