--- a/_data/connect-to-perform.yml
+++ b/_data/connect-to-perform.yml
@@ -37,5 +37,5 @@ werkvorm-tekst: >
 
 
   Ook is het spel aan te vragen als losse workshop. Denk daarbij aan een halve of hele dag, online of offline voor een groep van 4 tot 80 deelnemers. Stuur voor meer informatie svp een mail naar Jojanneke van Goïnga.
-button1: Meer weten over de open spelavond?
-button2: Meld je aan voor de open spelavond
+button1: Meer weten over Connect to Perform (link naar artikel 2019)
+button2: Meld je hier aan voor de open spelavond
