Update Teksten “connect-to-perform”

--- a/_data/connect-to-perform.yml
+++ b/_data/connect-to-perform.yml
@@ -7,9 +7,7 @@ landing-tekst: ‘Connect to Perform’ is het gedachtegoed dat de basis vormt v
   een spel ontworpen wat met groot succes in organisaties en op onze open
   avonden gespeeld wordt.
 methoden: Connect to Perform Cultuurontwikkeling
-methoden-tekst: Meer achtergrondinformatie lezen? In het Tijdschrift voor
-  Ontwikkeling in Organisaties verscheen in 2019 dit artikel (LINK) over onze
-  aanpak.
+methoden-tekst: " "
 pagina-illustratie: /assets/images/upload/connect-to-perform-ingevuld.jpg
 werkwijze-titel: "Connect to Perform: het spel "
 werkwijze-tekst: >-
