Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -62,7 +62,7 @@ wat-wij-doen-1-tekst: >-
 
   * Reorganisaties/fusies/ samenwerkingsverbanden optimaliseren
 
-  * Invoeren en begeleiden van Agile/Scrum (GEEN LINK!)
+  * Invoeren en begeleiden van Agile/Scrum
 
   * Programma en projectmanagement
 wat-wij-doen-1-contact: |-
