Update Teksten “connect-to-perform”

--- a/_data/connect-to-perform.yml
+++ b/_data/connect-to-perform.yml
@@ -20,7 +20,7 @@ werkwijze-tekst: >-
 
 
   Je krijgt zicht op zo’n vijftig verschillende interventies die toepasbaar zijn in de werkpraktijk, om het gedrag en de cultuur van een team en organisatie te beïnvloeden. Kortom, in een paar uur wordt je op interactieve wijze ondergedompeld in onze succesvolle aanpak hoe je meer impact met je team maakt.
-werkvorm-titel: Open Spelavond
+werkvorm-titel: Open spelavond
 werkvorm-tekst: >
   Als kennismaking organiseren we een aantal keer per jaar een open spelavond,
   tegenwoordig veelal online, waarop onze relaties en geïnteresseerden welkom
