--- a/_data/connect-to-perform.yml
+++ b/_data/connect-to-perform.yml
@@ -1,11 +1,11 @@
 title: Connect to perform
 pagina-afbeelding: /assets/images/upload/parachute.jpg
 landing-tekst: ‘Connect to Perform’ is het gedachtegoed dat de basis vormt voor
-  Human Connection’s advieswerk. Het demonstreert hoe teams naar een meer
-  effectieve én prettige werkwijze te bewegen zijn door (onderlinge) verbinding
-  te maken. Om de brug te slaan tussen ’theorie’ en ‘zelf toepassen’, hebben we
-  een spel ontworpen wat met groot succes in organisaties en op onze open
-  avonden gespeeld wordt.
+  Human Connection’s advieswerk. Het demonstreert hoe teams en organisaties naar
+  een meer effectieve én prettige werkwijze te bewegen zijn door (onderlinge)
+  verbinding te maken. Om de brug te slaan tussen ’theorie’ en ‘zelf toepassen’,
+  hebben we een spel ontworpen wat met groot succes in organisaties en op onze
+  open avonden gespeeld wordt.
 methoden: Connect to Perform Cultuurontwikkeling
 methoden-tekst: " "
 pagina-illustratie: /assets/images/upload/connect-to-perform-ingevuld.jpg
