Update Teksten “connect-to-perform”

--- a/_data/connect-to-perform.yml
+++ b/_data/connect-to-perform.yml
@@ -1,4 +1,4 @@
-title: Connect to perform
+title: Connect to Perform
 pagina-afbeelding: /assets/images/upload/parachute.jpg
 landing-tekst: ‘Connect to Perform’ is het gedachtegoed dat de basis vormt voor
   Human Connection’s advieswerk. Het demonstreert hoe teams en organisaties naar
