--- a/_data/hoe-wij-werken.yml
+++ b/_data/hoe-wij-werken.yml
@@ -5,12 +5,12 @@ landing-tekst: >-
 
   We hebben veel kennis in huis en zijn doorgewinterd in een aantal methodieken. Waar nodig zetten we deze in. Theorie en modellen gebruiken we als collectief begrippenkader en gemeenschappelijk taal. Het accent ligt bij ons altijd op directe toepasbaarheid in het dagelijkse werk.
 pagina-afbeelding: /assets/images/upload/parachute.jpg
-waar-wij-voor-staan: Methoden en Werkvormen
+waar-wij-voor-staan: Methoden en werkvormen
 waar-wijvoor-staan-tekst: >-
   Voorbeelden van methoden en werkvormen zijn: Connect to
-  Perform-cultuurontwikkeling, Agile/Scrum, Deep Democracy, Zakelijk Tekenen,
-  Discovery Insights, Voice Dialogue, Onomkeerbaar veranderen, Ontwerpen met de
-  leerinfrastructuur, Diverse creatieve werkvormen 
+  Perform-cultuurontwikkeling, agile/scrum, deep democracy, zakelijk tekenen,
+  Discovery Insights, Voice Dialogue, onomkeerbaar veranderen, ontwerpen met de
+  leerinfrastructuur, diverse creatieve werkvormen 
 
 
   Ontwikkelingsgericht als we zijn, blijven we up to date met de nieuwste inzichten op het gebied van theorie en praktijk.
