--- a/_data/hoe-wij-werken.yml
+++ b/_data/hoe-wij-werken.yml
@@ -14,32 +14,32 @@ waar-wijvoor-staan-tekst: >-
 
 
   Ontwikkelingsgericht als we zijn, blijven we up to date met de nieuwste inzichten op het gebied van theorie en praktijk.
-waarde-1-titel: Contact en context
+waarde-1-titel: 1. Contact en context
 waarde-1-tekst: "Het begint bij persoonlijk contact. We bekijken samen met een
   opdrachtgever wat de context van de organisatie en de mensen op de werkvloer
   is. We kijken met een brede blik op het geheel: 'wat is hier nou echt aan de
   hand?'"
 waarde-1-afbeelding: /assets/images/upload/icoon1dun.png
-waarde-2-titel: Pragmatisch ontwerp en advies
+waarde-2-titel: 2. Pragmatisch ontwerp en advies
 waarde-2-tekst: Op basis daarvan geven we advies over een effectieve aanpak.
   Hierbij laten we de organisatie zoveel mogelijk zelf aan het stuur staan. We
   ontwerpen vooruit, het liefst samen met de mensen om wie het gaat. We scheppen
   realistische verwachtingen en kaders.
 waarde-2-afbeelding: /assets/images/upload/icoon1dun.png
-waarde-3-titel: Begeleiding
+waarde-3-titel: 3.  Begeleiding
 waarde-3-tekst: We begeleiden de uitvoering stap voor stap, zodat bijstelling
   altijd mogelijk is. We werken methodisch waar nodig. We begrijpen de dynamiek
   en complexiteit van organisaties en hebben ook altijd oog voor de individuele
   mens en zijn werk en privé context.
 waarde-3-afbeelding: /assets/images/upload/icoon1dun.png
-waarde-4-titel: Doorpakken tot het echt werkt​
+waarde-4-titel: 4. Doorpakken tot het echt werkt​
 waarde-4-tekst: Juist op lastige momenten, of op het punt dat het juist te stil
   lijkt, helpen we om door te pakken.  We helpen de bewustwording om te zetten
   in actie op de werkvloer. Niet krampachtig vasthoudend aan het 'plan van een
   half jaar geleden', maar opnieuw in relatie tot de huidige koers en
   omstandigheden van de organisatie. Met de blik op lange termijn resultaat.​
 waarde-4-afbeelding: /assets/images/upload/icoon1dun.png
-waarde-5-titel: Evalueren
+waarde-5-titel: 5. Evalueren
 waarde-5-tekst: Ontwikkeling is nooit 'af'. Wel vinden we het belangrijk dat
   onze klanten na onze begeleiding ook weer een tijd zelfstandig verder weten
   gaan. We helpen scherp te evalueren en te anticiperen op volgende
