Update Teksten “home”

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -105,7 +105,7 @@ wat-wij-doen-3-tekst: >-
   We adviseren over de meest effectieve aanpak en ontwerpen en begeleiden workshops of trajecten zoals:
 
 
-  * Ontwikkeltrajecten
+  * Ontwikkeltrajecten en opleidingsprogramma's 
 
   * Leiderschapsprogramma's
 
