--- a/_data/werken-bij-ons.yml
+++ b/_data/werken-bij-ons.yml
@@ -1,4 +1,5 @@
 title: Werken bij
+vacature-open: false
 pagina-afbeelding: /assets/images/upload/parachute.jpg
 landing-tekst:
   Hier komt tekst We zoeken iemand die met zelfvertrouwen en een frisse blik voor de groep
