vacature only visible if there is one

--- a/_data/werken-bij-ons.yml
+++ b/_data/werken-bij-ons.yml
@@ -1,5 +1,5 @@
 title: Werken bij
-vacature-open: false
+vacature-open: true
 pagina-afbeelding: /assets/images/upload/parachute.jpg
 landing-tekst:
   Hier komt tekst We zoeken iemand die met zelfvertrouwen en een frisse blik voor de groep
