--- a/_data/werken-bij-ons.yml
+++ b/_data/werken-bij-ons.yml
@@ -1,34 +1,24 @@
 title: Werken bij
-vacature-open: true
+vacature-open: false
 pagina-afbeelding: /assets/images/upload/parachute.jpg
-landing-tekst:
-  Hier komt tekst We zoeken iemand die met zelfvertrouwen en een frisse blik voor de groep
-  kan staan en ook in staat is individuele coachgesprekken te voeren. Je
-  frisse blik en creativiteit zijn van harte welkom, evenals je vermogen
-  om, ongeacht de omstandigheden, op een constructieve manier om te gaan
-  met groepsdynamiek. Je blik is breder dan persoonlijke ontwikkeling
-  alleen, je hebt interesse in organisatie ontwikkeling, van strategie tot
-  uitvoering en bent eager om daar meer over te leren.
+landing-tekst: Hier komt tekst We zoeken iemand die met zelfvertrouwen en een
+  frisse blik voor de groep kan staan en ook in staat is individuele
+  coachgesprekken te voeren. Je frisse blik en creativiteit zijn van harte
+  welkom, evenals je vermogen om, ongeacht de omstandigheden, op een
+  constructieve manier om te gaan met groepsdynamiek. Je blik is breder dan
+  persoonlijke ontwikkeling alleen, je hebt interesse in organisatie
+  ontwikkeling, van strategie tot uitvoering en bent eager om daar meer over te
+  leren.
 kop: Als coach/begeleider van ontwikkelprogramma’s
 wat-je-doet: Wat doe je als?
 wat-je-doet-tekst: >-
-  Je maakt op maat programma’s waarin medewerkers en managers van
-  organisaties zich kunnen ontwikkelen. Denk hierbij als een jaartraject
-  ‘Persoonlijk Leiderschap’, een ‘Masterclass-traject voor talent’ of
-  andere vormen van trainee- of leiderschapsprogramma’s.
+  Je maakt op maat programma’s waarin medewerkers en managers van organisaties
+  zich kunnen ontwikkelen. Denk hierbij als een jaartraject ‘Persoonlijk
+  Leiderschap’, een ‘Masterclass-traject voor talent’ of andere vormen van
+  trainee- of leiderschapsprogramma’s.
 
 
-  We zoeken iemand die met zelfvertrouwen en een frisse blik voor de groep
-  kan staan en ook in staat is individuele coachgesprekken te voeren. Je
-  frisse blik en creativiteit zijn van harte welkom, evenals je vermogen
-  om, ongeacht de omstandigheden, op een constructieve manier om te gaan
-  met groepsdynamiek. Je blik is breder dan persoonlijke ontwikkeling
-  alleen, je hebt interesse in organisatie ontwikkeling, van strategie tot
-  uitvoering en bent eager om daar meer over te leren. Je kunt goed
-  samenwerken en bent tegelijkertijd autonoom genoeg om in onze
-  kleinschalige, platte organisatie je eigen weg te vinden. Het spiegelen
-  van klanten, collega’s en ook de spotlight op jezelf richten, vind je
-  een mooie uitdaging.
+  We zoeken iemand die met zelfvertrouwen en een frisse blik voor de groep kan staan en ook in staat is individuele coachgesprekken te voeren. Je frisse blik en creativiteit zijn van harte welkom, evenals je vermogen om, ongeacht de omstandigheden, op een constructieve manier om te gaan met groepsdynamiek. Je blik is breder dan persoonlijke ontwikkeling alleen, je hebt interesse in organisatie ontwikkeling, van strategie tot uitvoering en bent eager om daar meer over te leren. Je kunt goed samenwerken en bent tegelijkertijd autonoom genoeg om in onze kleinschalige, platte organisatie je eigen weg te vinden. Het spiegelen van klanten, collega’s en ook de spotlight op jezelf richten, vind je een mooie uitdaging.
 wat-we-bieden: Dit bieden we je ook
 wat-we-bieden-tekst: >-
   * Een salaris dat past bij jouw kennis en ervaring. 
