Update Teksten “werken-bij-ons”

--- a/_data/werken-bij-ons.yml
+++ b/_data/werken-bij-ons.yml
@@ -1,5 +1,5 @@
 title: Werken bij
-vacature-open: true
+vacature-open: false
 pagina-afbeelding: /assets/images/upload/parachute.jpg
 landing-tekst: Hier komt tekst We zoeken iemand die met zelfvertrouwen en een
   frisse blik voor de groep kan staan en ook in staat is individuele
