Update Teksten “ctp-contact”

--- a/_data/ctp-contact.yml
+++ b/_data/ctp-contact.yml
@@ -1,8 +1,4 @@
-meer-informatie: Wil je ook na deze avond door ons geïnformeerd worden over onze
-  activiteiten op het gebied van organisatie- en cultuurontwikkeling? Als je
-  hieronder toestemming geeft dan krijg je voor maximaal 5 jaar informatie van
-  ons over thema-avonden en nieuwsberichten per mail. Je kunt je uiteraard elk
-  moment weer uitschrijven.*
+meer-informatie: "   "
 landing-tekst: >-
   Alles wat we doen is maatwerk, omdat elke verandering haar eigen dynamiek,
   complexiteit en tempo heeft.  
