--- a/_data/ctp-contact.yml
+++ b/_data/ctp-contact.yml
@@ -1,4 +1,4 @@
-meer-informatie: "   "
+meer-informatie: "   DEZE VRAAG MAG WEG"
 landing-tekst: >-
   Alles wat we doen is maatwerk, omdat elke verandering haar eigen dynamiek,
   complexiteit en tempo heeft.  
