added success page

--- a/_data/ctp-contact.yml
+++ b/_data/ctp-contact.yml
@@ -21,3 +21,5 @@ data:
   - datum: 9 november 2023
 hoe: Via wie of hoe weet je van de Connect to Perform avond?
 reden: Wat is je reden van aanmelden?
+success: Dankjewel voor je bericht!
+button-terug: Terug naar de homepage
