added success text

--- a/_data/ctp-contact.yml
+++ b/_data/ctp-contact.yml
@@ -22,4 +22,5 @@ data:
 hoe: Via wie of hoe weet je van de Connect to Perform avond?
 reden: Wat is je reden van aanmelden?
 success: Dankjewel voor je bericht!
+success-text: We reageren zo snel mogelijk.
 button-terug: Terug naar de homepage
